fixed spacing issue for first div

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 #apply {
-    padding-top: 220px;
+    padding-top: 213px;
 }
 
 .sectionheader {
